// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompts (isCI = false) > spinner > message > sets message for next frame 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[35m◐[39m  foo",
]
`;

exports[`prompts (isCI = false) > spinner > start > renders frames at interval 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[35m◐[39m  ",
  "[999D",
  "[J",
  "[35m◓[39m  ",
  "[999D",
  "[J",
  "[35m◑[39m  ",
]
`;

exports[`prompts (isCI = false) > spinner > start > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  foo",
]
`;

exports[`prompts (isCI = false) > spinner > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m   [0s]",
]
`;

exports[`prompts (isCI = false) > spinner > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[31m■[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > spinner > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[31m▲[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > spinner > stop > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  foo
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > spinner > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ",
  "[999D",
  "[J",
  "[32m◇[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m[9m[2m[22m[29m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > renders cancelled value if one set 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mxy[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mundefined[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > renders placeholder if set 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7mb[27m[2mar[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = false) > text > renders submitted value 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > spinner > message > sets message for next frame 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[35m◐[39m  foo...",
]
`;

exports[`prompts (isCI = true) > spinner > start > renders frames at interval 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
]
`;

exports[`prompts (isCI = true) > spinner > start > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  foo...",
]
`;

exports[`prompts (isCI = true) > spinner > start > renders timer when indicator is "timer" 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
]
`;

exports[`prompts (isCI = true) > spinner > stop > renders cancel symbol if code = 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[31m■[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > spinner > stop > renders error symbol if code > 1 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[31m▲[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > spinner > stop > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[32m◇[39m  foo
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > spinner > stop > renders submit symbol and stops spinner 1`] = `
[
  "[?25l",
  "[90m│[39m
",
  "[35m◒[39m  ...",
  "
",
  "[999D",
  "[J",
  "[32m◇[39m  
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > can cancel 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m[9m[2m[22m[29m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > renders cancelled value if one set 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[31m■[39m  foo
[90m│[39m  [9m[2mxy[22m[29m
[90m│[39m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > renders message 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mundefined[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > renders placeholder if set 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7mb[27m[2mar[22m
[36m└[39m
",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mbar[22m",
  "
",
  "[?25h",
]
`;

exports[`prompts (isCI = true) > text > renders submitted value 1`] = `
[
  "[?25l",
  "[90m│[39m
[36m◆[39m  foo
[36m│[39m  [7m[8m_[28m[27m
[36m└[39m
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "[36m│[39m  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "[32m◇[39m  foo
[90m│[39m  [2mxy[22m",
  "
",
  "[?25h",
]
`;
